Expand on null-state, allocation, and SBO

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -231,15 +231,16 @@ widget::~widget() = default;
 
 ### Should there be be an empty state?
 
-There is a design decision to be made about the default constructor
-of `indirect_value`. It could place `indirect_value` in an empty state
-with no owned object or it could default construct an owned object
-so that `indirect_value` is never empty.
+There is a design decision to be made about the default constructor of `indirect_value`. 
+It could place `indirect_value` in an empty state with no owned object or it could 
+default construct an owned object so that `indirect_value` is never empty. This would
+either add a requirement that `T` supports default construction or only support default
+construction conditionally when also supported by `T`.
 
-If `indirect_value<T>` is never empty then `T` must be default
-constructible for `indirect_value<T>` to be a regular type.
-The default constructor of `indirect_value<T>` would then need to allocate
-memory, which cannot be controlled by the user-supplied copier or deleter.
+If `indirect_value<T>` is never empty then `T` must be default constructible for 
+`indirect_value<T>` to be a regular type. The default constructor of `indirect_value<T>`
+would then need to allocate memory, which cannot be controlled by the user-supplied
+copier or deleter.
 
 If the default constructed state of `indirect_value` is non-empty then the moved from
 state should be similarly non-empty. This requires that `T` is noexcept move constructible.
@@ -248,48 +249,46 @@ Allowing an empty state for `indirect_value<T>` imposes preconditions on operato
 (similar to those of the raw pointer it may be replacing) but removes requirements on `T` and the need
 to allocate memory.
 
-A nullable `indirect_value<T>` could be mimicked with `std::optional<indirect_value<T>>` but this is verbose,
-does not solve the problem of `T` needing to be noexcept move-constructible and would require
-partial template specialization of `std::optional` to avoid overhead that would not be incurred by a
-nullable `indirect_value`.
+A nullable `indirect_value<T>` could be mimicked with `std::optional<indirect_value<T>>` 
+but this is verbose, does not solve the problem of `T` needing to be noexcept 
+move-constructible and would require partial template specialization of `std::optional` 
+to avoid the overhead that would be incurred by a nullable `indirect_value`.  But perhaps
+the most unfortunate side effect of this approach is that to access the underlying `T`
+the `std::optional` must be dereferenced to get to the `indirect_value`, which then requires
+a second dereference to get to the underlying `T`.  This pattern makes usage unwieldy. 
 
 As designed, `indirect_value` has an empty state where it owns no object.
 A default constructed `indirect_value` is empty and the empty state is the state of a moved-from object.
 
-
-### Is there a small object optimization?
-
-A small object optimization is permissible for `indirect_value`.
-A small buffer that is part of the `indirect_value` class can be used to store the owned object
-if it is small. We do not require that `indirect_value` is the same size as a raw pointer;
-implementers are free, but not required, to add a small buffer optimization as a quality of
-implementation improvement.
-
-It would be possible for the size of the small buffer to be specified as a template argument.
-Such a design would be inconsistent with the broader Standard Library design:
- `std::string`, `std::any`, `std::function` all permit a small object optimization but do not
- let users specify the size of the buffer.
-
-The size of the small buffer optimization could be deduced from the size of the underlying `T`,
-however, to do so breaks the requirement supporting incomplete types. Another way to address this
-is via allocator support, which delays the requirement to detect size to functions marked as not 
-supporting the incomplete requirement.  
-
 ### How are allocators supported?
 
 It may be desirable for users to control the way memory is managed by an instance of a class.
-Classes such as `std::vector` and `std::string` allow an allocator to be specified as template argument
-to control memory management.
+Classes such as `std::vector` and `std::string` allow an allocator to be specified as a template argument
+to control memory management. There is existing precedence for allocator support of types in the memory
+management library; `std::shared_ptr` supports allocators via `std::allocate_shared`, [M. Knejp] suggested
+the introduction of `std::allocate_unique` to support allocator use with `std::unique_ptr`.
 
 Like `std::unique_ptr`, `indirect_value` allows a deleter to be provided as a template argument
-so that disposal of the owned object can be customized. `indirect_value` also allows copying to be be
-customized by specifying a copier, another template argument.
+so that disposal of the owned object can be customized. `indirect_value` also allows copying to be
+customized by specifying a copier, another template argument.  However, this raises the question of if the 
+copier and deleter should be combined types. If not combined then both must hold either a reference to an
+allocator (doubling the storage requirements) or, if encapsulating the allocator, then one must own the
+allocator while the second holds a reference.  While combining the interfaces into one type would solve this
+it would reduce the usage with custom lambdas without specialising for a combined object to be created 
+from the two copier and deleter lambda via something akin to the overload pattern. This issue is not 
+addressed further, instead opting to keep to the pre-allocator design, but the authors welcome feedback here. 
 
-The in-place constructor of `indirect_value<T>` uses `new` to create an instance of `T` with the supplied
-constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and
-`default_delete`.
+Memory management for `indirect_value` can be fully controlled via the `allocate_indirect_value` function
+which allows passing in an allocator to control the source of memory.  Custom copier and deleter then use
+the allocator for allocations and deallocations.
 
-Memory management for `indirect_value` can be fully controlled via the `allocate_indirect_value` function which allows passing in an allocator to control the source of memory.  Custom copier and deleter then use the allocator for allocations and deallocations.
+### Is there a small-buffer object optimization?
+
+Previous revisions of the paper suggested this was permissible as a quality of implementation improvement.
+However, this revision has introduced allocator support, which offers an alternative mechanism for 
+supporting the small-buffer optimization.  An allocator, supporting small buffer optimization, can be
+provided. This allows achieving the same results while separating the details of the small buffer 
+optimization from `indirect_value`. 
 
 ## Prior Art
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
@@ -711,15 +710,19 @@ The authors would like to thank Thomas Russell for the original suggestions of a
 
 # References
 
+[W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
+
 [J. Coe] [p0201r5: A polymorphic value-type for C++](https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0201r5.html)
 
 [J. Coplien] Advanced C++ Programming Styles and Idioms (Addison-Wesley), James O. Coplien, 1992
 
 [C. Ericson] [Memory Optimization, Christer Ericson, Games Developers Conference, 2003](http://realtimecollisiondetection.net/pubs/GDC03_Ericson_Memory_Optimization.ppt)
 
-[A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
+[R. Grimm] [Visiting a std::variant with the Overload Pattern](https://www.modernescpp.com/index.php/visiting-a-std-variant-with-the-overload-pattern)
 
 [H. Hinnant] [“Incomplete types and shared_ptr / unique_ptr”, Howard Hinnant, 2011](http://howardhinnant.github.io/incomplete.html)
+
+[M. Knejp] [P0316R0: allocate_unique and allocator_delete](https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2017/p0316r0.html)
 
 [H. Sutter] ["Pimpls - Beauty Marks You Can Depend On", Herb Sutter, 1998](http://www.gotw.ca/publications/mill04.htm)
 
@@ -727,6 +730,4 @@ The authors would like to thank Thomas Russell for the original suggestions of a
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
 
-[W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
-
-[M. Knejp][P0316R0: allocate_unique and allocator_delete](https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2017/p0316r0.html)
+[A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
