Dev twon latest revision (#110)
* Update generated paper version

* Update gitignore

* Standard never says 'method', say 'function' instead

* Preconditions over requires/expects

* Remarks after effects

* Conversion to bool is true

* Cpp17CopyConstructable

* Copy assignable is true

* Allocator support plus version updates

* Add acknowledgement to contributors

* Align allocation factory which allocation for shared pointers i.e. 'allocate_indirect_value'

* Add clarrification to wording of indirect_value around presentness of copier and deleter

* Correct language in destructor effects

* Correct assignment constraints

* Update remarks to specify only when complete types are required

* Add clarrifying constraints

* Clarrify copy-assignment operator

* Update reference to polymorphic_value

* Cross reference std::default_copy

* Clarrify constructor

* Clarrify mix of static/dynamic requirements

* Remove requirement covered in the general section

* Mandates well formed

* Add required text for mem.synopsis

* Reference Carbon's implementation of indirect_value

* Add note on allocators

* Expand on null-state, allocation, and SBO

* Wording clean up for constructor

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -20,6 +20,12 @@ Add a class template, `indirect_value`, to the C++ Standard Library to support f
 
 # Change history
 
+Changes in P1950r2
+
+* Wording fixes.
+
+* Add allocator support.
+
 Changes in P1950r1
 
 * Add design discussion.
@@ -225,15 +231,16 @@ widget::~widget() = default;
 
 ### Should there be be an empty state?
 
-There is a design decision to be made about the default constructor
-of `indirect_value`. It could place `indirect_value` in an empty state
-with no owned object or it could default construct an owned object
-so that `indirect_value` is never empty.
+There is a design decision to be made about the default constructor of `indirect_value`. 
+It could place `indirect_value` in an empty state with no owned object or it could 
+default construct an owned object so that `indirect_value` is never empty. This would
+either add a requirement that `T` supports default construction or only support default
+construction conditionally when also supported by `T`.
 
-If `indirect_value<T>` is never empty then `T` must be default
-constructible for `indirect_value<T>` to be a regular type.
-The default constructor of `indirect_value<T>` would then need to allocate
-memory, which cannot be controlled by the user-supplied copier or deleter.
+If `indirect_value<T>` is never empty then `T` must be default constructible for 
+`indirect_value<T>` to be a regular type. The default constructor of `indirect_value<T>`
+would then need to allocate memory, which cannot be controlled by the user-supplied
+copier or deleter.
 
 If the default constructed state of `indirect_value` is non-empty then the moved from
 state should be similarly non-empty. This requires that `T` is noexcept move constructible.
@@ -242,52 +249,52 @@ Allowing an empty state for `indirect_value<T>` imposes preconditions on operato
 (similar to those of the raw pointer it may be replacing) but removes requirements on `T` and the need
 to allocate memory.
 
-A nullable `indirect_value<T>` could be mimicked with `std::optional<indirect_value<T>>` but this is verbose,
-does not solve the problem of `T` needing to be noexcept move-constructible and would require
-partial template specialization of `std::optional` to avoid overhead that would not be incurred by a
-nullable `indirect_value`.
+A nullable `indirect_value<T>` could be mimicked with `std::optional<indirect_value<T>>` 
+but this is verbose, does not solve the problem of `T` needing to be noexcept 
+move-constructible and would require partial template specialization of `std::optional` 
+to avoid the overhead that would be incurred by a nullable `indirect_value`.  But perhaps
+the most unfortunate side effect of this approach is that to access the underlying `T`
+the `std::optional` must be dereferenced to get to the `indirect_value`, which then requires
+a second dereference to get to the underlying `T`.  This pattern makes usage unwieldy. 
 
 As designed, `indirect_value` has an empty state where it owns no object.
 A default constructed `indirect_value` is empty and the empty state is the state of a moved-from object.
 
-
-### Is there a small object optimization?
-
-A small object optimization is permissible for `indirect_value`.
-A small buffer that is part of the `indirect_value` class can be used to store the owned object
-if it is small. We do not require that `indirect_value` is the same size as a raw pointer;
-implementers are free, but not required, to add a small buffer optimization as a quality of
-implementation improvement.
-
-It would be possible for the size of the small buffer to be specified as a template argument.
-Such a design would be inconsistent with the broader Standard Library design:
- `std::string`, `std::any`, `std::function` all permit a small object optimization but do not
- let users specify the size of the buffer.
-
-
 ### How are allocators supported?
 
 It may be desirable for users to control the way memory is managed by an instance of a class.
-Classes such as `std::vector` and `std::string` allow an allocator to be specified as template argument
-to control memory management.
+Classes such as `std::vector` and `std::string` allow an allocator to be specified as a template argument
+to control memory management. There is existing precedence for allocator support of types in the memory
+management library; `std::shared_ptr` supports allocators via `std::allocate_shared`, [M. Knejp] suggested
+the introduction of `std::allocate_unique` to support allocator use with `std::unique_ptr`.
 
 Like `std::unique_ptr`, `indirect_value` allows a deleter to be provided as a template argument
-so that disposal of the owned object can be customized. `indirect_value` also allows copying to be be
-customized by specifying a copier, another template argument.
+so that disposal of the owned object can be customized. `indirect_value` also allows copying to be
+customized by specifying a copier, another template argument.  However, this raises the question of if the 
+copier and deleter should be combined types. If not combined then both must hold either a reference to an
+allocator (doubling the storage requirements) or, if encapsulating the allocator, then one must own the
+allocator while the second holds a reference.  While combining the interfaces into one type would solve this
+it would reduce the usage with custom lambdas without specialising for a combined object to be created 
+from the two copier and deleter lambda via something akin to the overload pattern. This issue is not 
+addressed further, instead opting to keep to the pre-allocator design, but the authors welcome feedback here. 
 
-The in-place constructor of `indirect_value<T>` uses `new` to create an instance of `T` with the supplied
-constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and
-`default_delete`.
+Memory management for `indirect_value` can be fully controlled via the `allocate_indirect_value` function
+which allows passing in an allocator to control the source of memory.  Custom copier and deleter then use
+the allocator for allocations and deallocations.
 
-Memory management for `indirect_value` can be fully controlled by specifying a suitable copier and
-deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
+### Is there a small-buffer object optimization?
 
+Previous revisions of the paper suggested this was permissible as a quality of implementation improvement.
+However, this revision has introduced allocator support, which offers an alternative mechanism for 
+supporting the small-buffer optimization.  An allocator, supporting small buffer optimization, can be
+provided. This allows achieving the same results while separating the details of the small buffer 
+optimization from `indirect_value`. 
 
 ## Prior Art
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
 
 This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C
-++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this
+++ repositories claiming to provide generic implementations of Pimpl.  Google Carbon Language, an experimental successor to C++ includes `IndirectValue` as a vocabulary type. Additionally other authors have addressed this
  topic [A. Upadyshev].  Some generic implementations of note in the wild are:
 
 <table>
@@ -300,6 +307,12 @@ This paper is not unique in these ideas. GitHub code search finds 602k lines of 
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>Carbon Language</td>
+<td>https://github.com/carbon-language/carbon-lang/blob/trunk/common/indirect_value.h</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
 <tr>
 <td>Boost Pimpl</td>
 <td>https://github.com/sean-/boost-pimpl</td>
@@ -356,7 +369,7 @@ pointer types:
 <table>
 <thead>
 <tr>
-<th>Method</th>
+<th>Function</th>
 <th>Description</th>
 <th>Incomplete/Complete</th>
 </tr>
@@ -477,6 +490,25 @@ This proposal is a pure library extension. It requires additions to be made to t
 
 # Technical specifications
 
+## Additions in [memory.syn] 20.2.2:
+
+```
+// [indirect.value], class template indirect_value
+template <class T> struct default_copy; 
+template <class T> struct copier_traits;
+
+template <class T, class C = std::default_copy<T>, class D = typename std::copier_traits<C>::deleter_type> class indirect_value;
+
+template <class T, class ...Ts> 
+  indirect_value<T> make_indirect_value(Ts&& ...ts); 
+
+template <class T, class A = std::allocator<T>, class... Ts>
+  indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
+
+template<class T>
+  void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
+```
+
 ## X.X Class template `copier_traits` [copier.traits]
 ```
 namespace std {
@@ -501,7 +533,7 @@ namespace std {
     };
 } // namespace std
 ```
-The class template default_copy serves as the default copier for the class template `indirect_value`.
+The class template default_copy [J. Coe] serves as the default copier for the class template `indirect_value`.
 The template parameter <code>T</code> of <code>default_copy</code> may be an incomplete type.
 
 <code>T* operator()(const T& t) const;</code>
@@ -522,6 +554,8 @@ Copying and disposal of the owned object can be customised by supplying a copier
 The template parameter `T` of `indirect_value` must be a non-union class type.
 
 The template parameter `T` of `indirect_value` may be an incomplete type.
+
+A copier and deleter are said to be present if a `indirect_value` object is constructed from a non-null pointer, or from a `indirect_value` object where a copier and deleter are present.
 
 *[Note: Implementations are encouraged to avoid the use of dynamic memory for ownership of small objects.]*
 
@@ -565,6 +599,9 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
     template <class T, class ...Ts> indirect_value<T>
     make_indirect_value(Ts&& ...ts);  // See below
 
+    template <class T, class A = std::allocator<T>, class... Ts>
+    indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
+
     // indirect_value specialized algorithms
     template<class T>
     void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
@@ -576,100 +613,116 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 ### X.Z.3 Class template `indirect_value` constructors [indirect_value.ctor]
 
 <code>constexpr indirect_value() noexcept;</code>
-* Remarks: The method shall work with incomplete pointer type for `T`.
 * Effects: Constructs an empty `indirect_value`.
-    * Postconditions: `bool(*this) == false`.
+* Postconditions: `bool(*this) == false`.
 
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
-* Effects: Creates an `indirect_value` object that owns the pointer `p`. If `p` is non-null then the copier and deleter of the `indirect_value` constructed are moved from `c` and `d`.
-* Requires: `C` and `D` satisfy the requirements of CopyConstructible. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns an object of type `T*`. The expression `d(p)` is well-formed, has well-defined behaviour, and does not throw exceptions.
+* Effects: Constructs a `indirect_value` which owns p, initializing the stored pointer with p. The copier and deleter of the `indirect_value` constructed are moved from `c` and `d`. If `p` is null, creates an empty object.
+* Constraints: `is_nothrow_move_assignable_v<C>` is true. `is_nothrow_move_assignable_v<D>` is true.
+* Preconditions: `C` and `D` meet the <i>Cpp17CopyConstructible</i> requirements. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns a non-null `T*` is as if copy constructed from *p. The expression `d(p)` has well-defined behaviour, and does not throw exceptions.
 * Postconditions: `bool(*this) == bool(p)`.
-* Remarks: A custom copier and deleter are said to be ‘present’ in a `indirect_value` initialised with this constructor.
+* Mandates: The expression `d(p)` is well-formed.
 
 <code>indirect_value(const indirect_value& p);</code>
-* Constraints: `is_copy_constructible_v<T>`
+* Constraints: `is_copy_constructible_v<T>` is true.
 * Effects: Creates a `indirect_value` object that owns a copy of the object managed by `p`. The copy is created by the copier in `p`. If `p` has a custom copier and deleter then the custom copier and deleter of the `indirect_value` constructed are copied from those in `p`.
+* Remarks: The constructor must work with pointer to an complete type `T`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value(indirect_value&& p) noexcept;</code>
 * Effects: Move-constructs an `indirect_value` instance from `p`. If `p` has a custom copier and deleter then the copier and deleter of the `indirect_value` constructed are the same as those in `p`.
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
-* Remarks: The method shall work with incomplete pointer type for `T`.
 
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
 * Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
 * Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
-* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
+* Preconditions: `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 ### X.Z.4 Class template `indirect_value` destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
-* Effects: If `get() == nullptr` there are no effects. If a custom deleter `d` is present then `d(p)` is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
+* Effects: If `*this` there are no effects. If a custom deleter `d` is present then `d(p)` is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
+* Remarks: The constructor must work with pointer to an complete type `T`.
 
 ### X.Z.5 Class template `indirect_value` assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
-* Constraints: `is_copy_assignable<T>`
-* Effects: `*this` owns a copy of the resource managed by `p`. If `p` has a custom copier and deleter then the copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`. Otherwise, the resource managed by `*this` is initialised by the copy constructor of the resource managed by `p`.
+* Constraints: `is_copy_assignable_v<C>` is true. `is_copy_assignable_v<D>` is true.
+* Effects: If `p` is empty, assigns an empty object. Otherwise creates an object that owns a copy of the object managed by `p`. The copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`.
+* Remarks: The function must work with pointer to an complete type `T`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Returns: `*this`.
 * Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value& operator=(indirect_value&& p) noexcept;</code>
+* Constraints: `is_nothrow_move_assignable_v<C>` is true. `is_nothrow_move_assignable_v<D>` is true.
 * Effects: Ownership of the resource managed by `p` is transferred to this. If `p` has a custom copier and deleter then the copier and deleter of `*this` is the same as those in `p`.
+* Remarks: The function must work with pointer to an complete type `T`.
 * Returns: `*this`.
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
 
 ### X.Z.6 Class template `indirect_value` modifiers [indirect_value.modifiers]
 <code>void swap(indirect_value<T>& p) noexcept;</code>
 * Effects: Exchanges the contents of `p` and `*this`.
-* Remarks: The method shall work with incomplete pointer type for `T`.
 
 ### X.Z.7 Class template `indirect_value` observers [indirect_value.observers]
 ```
 T& operator*();
 const T& operator*() const;
 ```
-* Requires: `bool(*this)`.
+* Preconditions: `bool(*this)` is true.
 * Returns: A reference to the owned object.
 
 ```
 T* operator->() noexcept;
 const T* operator->() const noexcept;
 ```
-* Requires: `bool(*this)`.
+* Preconditions: `bool(*this)` is true.
 * Returns: A pointer to the owned object.
-* Remarks: The method shall work with incomplete pointer type for `T`.
 
 <code>explicit operator bool() const noexcept;</code>
 * Returns: false if the `indirect_value` is empty, otherwise true.
-* Remarks: The method shall work with incomplete pointer type for `T`.
 
 ### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
 
 ```cpp
-template <class T, class U=T, class ...Ts> indirect_value<T>
-  make_indirect_value(Ts&& ...ts);
+template <class T, class U=T, class ...Ts>
+indirect_value<T> make_indirect_value(Ts&& ...ts);
 ```
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
-* Expects: `U` meets the `Cpp17CopyConstructible` requirements.
+* Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
-* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
+* Preconditions: `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
+
+```cpp
+template <class T, class U = T, class A = std::allocator<U>, class... Ts>
+indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
+```
+
+* Constraints: `is_constructible_v<U, Ts...>` is true.
+* Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
+* Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+* Preconditions `is_same_v<C, allocator_copy> && is_same_v<D, allocator_delete>`.
 
 # Acknowledgements
-The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
+Contributions to the open source reference implementation have forwarded the design, including but not limited to contribution from Kilian Henneberger, Ed Catmur, Stephen Kelly & Malcolm Parsons.
+The authors would like to thank Thomas Russell for the original suggestions of allocator support, Bengt Gustafsson for useful discussion on SBO and nullstate representation via std::optional specialisation, Jonathan Wakely & Daniel Krügler for document reviews, Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
 
 # References
 
-[J. Coe] [p0201r3: A polymorphic value-type for C++](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0201r3.pdf)
+[W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
+
+[J. Coe] [p0201r5: A polymorphic value-type for C++](https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0201r5.html)
 
 [J. Coplien] Advanced C++ Programming Styles and Idioms (Addison-Wesley), James O. Coplien, 1992
 
 [C. Ericson] [Memory Optimization, Christer Ericson, Games Developers Conference, 2003](http://realtimecollisiondetection.net/pubs/GDC03_Ericson_Memory_Optimization.ppt)
 
-[A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
+[R. Grimm] [Visiting a std::variant with the Overload Pattern](https://www.modernescpp.com/index.php/visiting-a-std-variant-with-the-overload-pattern)
 
 [H. Hinnant] [“Incomplete types and shared_ptr / unique_ptr”, Howard Hinnant, 2011](http://howardhinnant.github.io/incomplete.html)
+
+[M. Knejp] [P0316R0: allocate_unique and allocator_delete](https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2017/p0316r0.html)
 
 [H. Sutter] ["Pimpls - Beauty Marks You Can Depend On", Herb Sutter, 1998](http://www.gotw.ca/publications/mill04.htm)
 
@@ -677,4 +730,4 @@ The authors would like to thank Thomas Russell, and Andrew Bennieston for useful
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
 
-[W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
+[A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
