--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -7,7 +7,7 @@ Audience: LEWG
 Status: P
 Group: WG21
 Issue Tracking: GitHub https://github.com/jbcoe/indirect_value/issues
-!Source: <a href="https://github.com/jbcoe/indirect_value/documentation/p1950.md">github.com/jbcoe/indirect_value/documentation/p1950.md</a>
+!Source: <a href="https://github.com/jbcoe/indirect_value/blob/main/documentation/p1950.md">https://github.com/jbcoe/indirect_value/blob/main/documentation/p1950.md</a>
 No Abstract: yes
 Markup Shorthands: markdown yes
 Markup Shorthands: biblio yes
